--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.1.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -36,9 +37,12 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
+    "@types/testing-library__jest-dom": "^5.9.5",
     "@typescript-eslint/eslint-plugin": "4.0.0",
     "@typescript-eslint/parser": "4.0.0",
-    "@upleveled/eslint-config-upleveled": "1.5.6",
+    "@upleveled/eslint-config-upleveled": "1.7.1",
     "babel-eslint": "10.1.0",
     "eslint": "7.11.0",
     "eslint-config-react-app": "6.0.0",
